# maverick-app

./: .gitignore  BACKLOG.md  README.md  project.yml
Maverick 2.icon/: icon.json
MaverickNoise/: Package.swift
MaverickNoise/Sources/MaverickNoise/: Base64URL.swift  CipherState.swift  Fingerprint.swift  HKDFNoise.swift  NoiseError.swift  (+3 more)
MaverickNoise/Tests/Fixtures/noise-harness/: Cargo.toml  main.rs
client/: Info.plist
client/Tests/: ConnectionManagerTests.swift  KeychainStoreTests.swift  MaverickNoiseLinkTests.swift  PairingControllerTests.swift  QRPayloadTests.swift  SessionStoreTests.swift  TransportTests.swift
mobile/: AGENTS.md  app.json  package.json  tsconfig.json
mobile/app/: _layout.tsx  index.tsx  pair.tsx  sessions.tsx  workspace.tsx
scripts/: ExportOptions-AppStore.plist  ExportOptions.plist  README.md  make-dmg.sh  package.sh  run-agent.sh  testflight.sh
server/: DEPRECATED.md  Info.plist
server/Sources/: AgentEventBroadcaster.swift  AgentEventNormalizer.swift  AgentSession.swift  AntigravityAdapter.swift  AppDelegate.swift  CircularBuffer.swift  ClaudeCodeAdapter.swift  ClientHandler.swift  CodexAdapter.swift  DirectoryListingService.swift  GitWrapper.swift  HermesAdapter.swift  HookConfigWriter.swift  HookServer.swift  MaverickAgentApp.swift  MenuBarController.swift  OpenCodeAdapter.swift  PTYSession.swift  ProjectIndexer.swift  SessionManager.swift  UploadStore.swift  WebSocketServer.swift  main.swift
server/Tests/: CircularBufferTests.swift  SessionManagerTests.swift  WebSocketIntegrationTests.swift
shared/: Package.swift
(+191 files in other folders)
